--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,24 +8,66 @@
     android:theme="@style/Theme.AppCompat.NoActionBar.Boavizta"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/btn_calculate"
-        android:layout_width="231dp"
-        android:layout_height="54dp"
-        android:layout_marginStart="70dp"
-        android:layout_marginEnd="70dp"
-        android:layout_marginBottom="16dp"
-        android:background="@drawable/custom_btn"
-        android:shadowColor="#0B0909"
-        android:shadowDx="10"
-        android:shadowDy="10"
-        android:text="@string/calcule"
-        android:textColor="#FFFFFF"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="TextContrastCheck" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/BoaviztaButtonHeader"
+                android:layout_width="49dp"
+                android:layout_height="43dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="3dp"
+                android:background="#00FFFFFF"
+                android:contentDescription="@string/image_du_haut"
+                android:foregroundTint="#00FFFFFF"
+                android:scaleType="center"
+                android:scaleX="0.6"
+                android:scaleY="0.6"
+                app:srcCompat="@drawable/ic_launcher_adaptive_fore" />
+
+            <TextView
+                android:id="@+id/BoaviztaTextHeader"
+                android:layout_width="322dp"
+                android:layout_height="36dp"
+                android:layout_marginTop="8dp"
+                android:clickable="true"
+                android:fontFamily="sans-serif-condensed-medium"
+                android:minHeight="48dp"
+                android:text="@string/boavizta"
+                android:textColor="@color/greenDark_boavizt"
+                android:textColorHighlight="@color/greenDark_boavizt"
+                android:textSize="24sp"
+                tools:ignore="TextSizeCheck,TouchTargetSizeCheck" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/BoaviztaSousTextHeader"
+            style="@android:style/Widget.Holo.TextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="0dp"
+            android:fontFamily="sans-serif-medium"
+            android:text="@string/d_couvrez_l_impact_environnemental_de_votre_serveur_en_quelques_clics"
+            android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
+            android:textColor="#00838F"
+            android:textSize="14sp"
+            tools:ignore="TextSizeCheck" />
+    </LinearLayout>
 
     <NumberPicker
         android:id="@+id/ram_qt_capacity"
@@ -144,62 +186,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ram_quantite" />
 
-    <ImageView
-        android:id="@+id/BoaviztaButtonHeader"
-        android:layout_width="49dp"
-        android:layout_height="43dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="3dp"
-        android:background="#00FFFFFF"
-        android:contentDescription="@string/image_du_haut"
-        android:foregroundTint="#00FFFFFF"
-        android:scaleType="center"
-        android:scaleX="0.6"
-        android:scaleY="0.6"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_launcher_adaptive_fore" />
-
-    <TextView
-        android:id="@+id/BoaviztaTextHeader"
-        android:layout_width="144dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="8dp"
-        android:clickable="true"
-        android:fontFamily="sans-serif-condensed-medium"
-        android:minHeight="48dp"
-        android:text="@string/boavizta"
-        android:textColor="@color/greenDark_boavizt"
-        android:textColorHighlight="@color/greenDark_boavizt"
-        android:textSize="24sp"
-        app:layout_constraintStart_toEndOf="@+id/BoaviztaButtonHeader"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/BoaviztaSousTextHeader"
-        style="@android:style/Widget.Holo.TextView"
-        android:layout_width="384dp"
-        android:layout_height="17dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="-16dp"
-        android:layout_marginEnd="8dp"
-        android:fontFamily="sans-serif-medium"
-        android:text="@string/d_couvrez_l_impact_environnemental_de_votre_serveur_en_quelques_clics"
-        android:textAlignment="center"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
-        android:textColor="#00838F"
-        android:textSize="12sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.272"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/BoaviztaTextHeader" />
-
     <TextView
         android:id="@+id/title_content"
         android:layout_width="304dp"
         android:layout_height="31dp"
         android:layout_marginStart="100dp"
-        android:layout_marginTop="46dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="100dp"
         android:fontFamily="sans-serif-medium"
         android:text="@string/config_server"
@@ -208,7 +200,8 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/BoaviztaSousTextHeader" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
+        tools:ignore="TextSizeCheck" />
 
     <TextView
         android:id="@+id/cpu"
@@ -374,5 +367,35 @@
         android:textColorHint="#E0F2F1"
         app:layout_constraintStart_toEndOf="@+id/ssd_nb_capacity"
         app:layout_constraintTop_toBottomOf="@+id/ssd_manufacturer" />
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:baselineAligned="false"
+        android:orientation="vertical"
+        android:textAlignment="textStart"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <Button
+            android:id="@+id/btn_calculate"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_gravity="bottom"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+            android:layout_weight="1"
+            android:background="@drawable/custom_btn"
+            android:text="@string/calcule"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            tools:ignore="TextContrastCheck,TextSizeCheck,VisualLintButtonSize"
+            tools:layout_editor_absoluteX="32dp" />
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
